# aerium-browser-android

./: .gitignore  README.md  SECURITY.md  UPDATING.md  args.gn  build.sh  patch.sh  theme.sh
.github/actions/stage/: action.yml
.github/workflows/: build.yml  upstream-watch.yml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
res/: icons.sh  layered_app_icon_foreground.xml
res/drawable/: themed_app_icon.xml
