chrome_public_manifest_package = "io.github.fatihgh.aerium"
is_desktop_android = true
target_os = "android"
target_cpu = "arm64"
is_component_build = false
is_debug = false
is_official_build = true
symbol_level = 0
blink_symbol_level = 0
v8_symbol_level = 0
chrome_pgo_phase = 0
# ThinLTO is on by default for official Android builds (is_official_build +
# is_android + chrome_pgo_phase != 1, see build/config/compiler/compiler.gni)
# and it is a major disk/memory cost: it embeds LLVM bitcode summaries in
# every .o file (bloating intermediate build output well past normal object
# sizes) and spawns parallel LTO backend codegen jobs at link time. Our CI
# runners have repeatedly hit disk exhaustion (exit 137) during long compile
# windows; disabling ThinLTO trades a slightly larger/slower final binary for
# a build that actually fits in 145G. Revisit if we ever move to
# self-hosted/bigger runners.
use_thin_lto = false
disable_fieldtrial_testing_config = true
ffmpeg_branding = "Chrome"
proprietary_codecs = true
enable_vr = false
enable_arcore = false
enable_openxr = false
enable_cardboard = false
enable_remoting = false
enable_reporting = false
google_api_key = "x"
google_default_client_id = "x"
google_default_client_secret = "x"

use_siso = true
use_login_database_as_backend = true
build_contextual_search = false
dcheck_always_on = false
enable_iterator_debugging = false
exclude_unwind_tables = false
icu_use_data_file = true
rtc_build_examples = false
use_errorprone_java_compiler = false
use_rtti = false
enable_av1_decoder = true
enable_dav1d_decoder = true
include_both_v8_snapshots = false
include_both_v8_snapshots_android_secondary_abi = false
generate_linker_map = false
